--- a/core-grid.css
+++ b/core-grid.css
@@ -9,100 +9,323 @@
 	width: auto;
 }
 
-.xs-0 {display: none}
-.xs-1, .xs-2, .xs-3, .xs-4, .xs-5, .xs-6, .xs-7, .xs-8, .xs-9, .xs-10, .xs-11, .xs-12, .xs-min, .xs-max {display: block}
-.xs-1, .xs-2, .xs-3, .xs-4, .xs-5, .xs-6, .xs-7, .xs-8, .xs-9, .xs-10, .xs-11, .xs-12, .xs-min {flex: none}
-.xs-min, .xs-max {width: auto}
-.xs-1 {width: 8.3333%}
-.xs-2 {width: 16.6667%}
-.xs-3 {width: 25%}
-.xs-4 {width: 33.3333%}
-.xs-5 {width: 41.6667%}
-.xs-6 {width: 50%}
-.xs-7 {width: 58.3333%}
-.xs-8 {width: 66.6667%}
-.xs-9 {width: 75%}
-.xs-10 {width: 83.3333%}
-.xs-11 {width: 91.6667%}
-.xs-12 {width: 100%}
-.xs-max {flex: 1 1 0}
+/* Extra-Small (>= 0px)
+----------------------------- */
 
-@media (min-width: 32em) {
-	.sm-0 {display: none}
-	.sm-1, .sm-2, .sm-3, .sm-4, .sm-5, .sm-6, .sm-7, .sm-8, .sm-9, .sm-10, .sm-11, .sm-12, .sm-min, .sm-max {display: block}
-	.sm-1, .sm-2, .sm-3, .sm-4, .sm-5, .sm-6, .sm-7, .sm-8, .sm-9, .sm-10, .sm-11, .sm-12, .sm-min {flex: none}
-	.sm-min, .sm-max {width: auto}
-	.sm-1 {width: 8.3333%}
-	.sm-2 {width: 16.6667%}
-	.sm-3 {width: 25%}
-	.sm-4 {width: 33.3333%}
-	.sm-5 {width: 41.6667%}
-	.sm-6 {width: 50%}
-	.sm-7 {width: 58.3333%}
-	.sm-8 {width: 66.6667%}
-	.sm-9 {width: 75%}
-	.sm-10 {width: 83.3333%}
-	.sm-11 {width: 91.6667%}
-	.sm-12 {width: 100%}
-	.sm-max {flex: 1 1 0}
-}
+.row > .col.xs-0 {display: none}
 
-@media (min-width: 48em) {
-	.md-0 {display: none}
-	.md-1, .md-2, .md-3, .md-4, .md-5, .md-6, .md-7, .md-8, .md-9, .md-10, .md-11, .md-12, .md-min, .md-max {display: block}
-	.md-1, .md-2, .md-3, .md-4, .md-5, .md-6, .md-7, .md-8, .md-9, .md-10, .md-11, .md-12, .md-min {flex: none}
-	.md-min, .md-max {width: auto}
-	.md-1 {width: 8.3333%}
-	.md-2 {width: 16.6667%}
-	.md-3 {width: 25%}
-	.md-4 {width: 33.3333%}
-	.md-5 {width: 41.6667%}
-	.md-6 {width: 50%}
-	.md-7 {width: 58.3333%}
-	.md-8 {width: 66.6667%}
-	.md-9 {width: 75%}
-	.md-10 {width: 83.3333%}
-	.md-11 {width: 91.6667%}
-	.md-12 {width: 100%}
-	.md-max {flex: 1 1 0}
-}
+.row > .col.xs-1,
+.row > .col.xs-2,
+.row > .col.xs-3,
+.row > .col.xs-4,
+.row > .col.xs-5,
+.row > .col.xs-6,
+.row > .col.xs-7,
+.row > .col.xs-8,
+.row > .col.xs-9,
+.row > .col.xs-10,
+.row > .col.xs-11,
+.row > .col.xs-12,
+.row > .col.xs-min,
+.row > .col.xs-max {display: block}
 
-@media (min-width: 64em) {
-	.lg-0 {display: none}
-	.lg-1, .lg-2, .lg-3, .lg-4, .lg-5, .lg-6, .lg-7, .lg-8, .lg-9, .lg-10, .lg-11, .lg-12, .lg-min, .lg-max {display: block}
-	.lg-1, .lg-2, .lg-3, .lg-4, .lg-5, .lg-6, .lg-7, .lg-8, .lg-9, .lg-10, .lg-11, .lg-12, .lg-min {flex: none}
-	.lg-min, .lg-max {width: auto}
-	.lg-1 {width: 8.3333%}
-	.lg-2 {width: 16.6667%}
-	.lg-3 {width: 25%}
-	.lg-4 {width: 33.3333%}
-	.lg-5 {width: 41.6667%}
-	.lg-6 {width: 50%}
-	.lg-7 {width: 58.3333%}
-	.lg-8 {width: 66.6667%}
-	.lg-9 {width: 75%}
-	.lg-10 {width: 83.3333%}
-	.lg-11 {width: 91.6667%}
-	.lg-12 {width: 100%}
-	.lg-max {flex: 1 1 0}
-}
+.row > .col.xs-1,
+.row > .col.xs-2,
+.row > .col.xs-3,
+.row > .col.xs-4,
+.row > .col.xs-5,
+.row > .col.xs-6,
+.row > .col.xs-7,
+.row > .col.xs-8,
+.row > .col.xs-9,
+.row > .col.xs-10,
+.row > .col.xs-11,
+.row > .col.xs-12,
+.row > .col.xs-min {flex: none}
 
-@media (min-width: 80em) {
-	.xl-0 {display: none}
-	.xl-1, .xl-2, .xl-3, .xl-4, .xl-5, .xl-6, .xl-7, .xl-8, .xl-9, .xl-10, .xl-11, .xl-12, .xl-min, .xl-max {display: block}
-	.xl-1, .xl-2, .xl-3, .xl-4, .xl-5, .xl-6, .xl-7, .xl-8, .xl-9, .xl-10, .xl-11, .xl-12, .xl-min {flex: none}
-	.xl-min, .xl-max {width: auto}
-	.xl-1 {width: 8.3333%}
-	.xl-2 {width: 16.6667%}
-	.xl-3 {width: 25%}
-	.xl-4 {width: 33.3333%}
-	.xl-5 {width: 41.6667%}
-	.xl-6 {width: 50%}
-	.xl-7 {width: 58.3333%}
-	.xl-8 {width: 66.6667%}
-	.xl-9 {width: 75%}
-	.xl-10 {width: 83.3333%}
-	.xl-11 {width: 91.6667%}
-	.xl-12 {width: 100%}
-	.xl-max {flex: 1 1 0}
-}
+.row > .col.xs-min,
+.row > .col.xs-max {width: auto}
+
+.row > .col.xs-1 {width: 8.3333%}
+
+.row > .col.xs-2 {width: 16.6667%}
+
+.row > .col.xs-3 {width: 25%}
+
+.row > .col.xs-4 {width: 33.3333%}
+
+.row > .col.xs-5 {width: 41.6667%}
+
+.row > .col.xs-6 {width: 50%}
+
+.row > .col.xs-7 {width: 58.3333%}
+
+.row > .col.xs-8 {width: 66.6667%}
+
+.row > .col.xs-9 {width: 75%}
+
+.row > .col.xs-10 {width: 83.3333%}
+
+.row > .col.xs-11 {width: 91.6667%}
+
+.row > .col.xs-12 {width: 100%}
+
+.row > .col.xs-max {flex: 1 1 .00000001px} /* 1 */
+
+/* Small (>= 512px)
+----------------------------- */
+
+.row[min-width~='32rem'] > .col.sm-0 {display: none}
+
+.row[min-width~='32rem'] > .col.sm-1,
+.row[min-width~='32rem'] > .col.sm-2,
+.row[min-width~='32rem'] > .col.sm-3,
+.row[min-width~='32rem'] > .col.sm-4,
+.row[min-width~='32rem'] > .col.sm-5,
+.row[min-width~='32rem'] > .col.sm-6,
+.row[min-width~='32rem'] > .col.sm-7,
+.row[min-width~='32rem'] > .col.sm-8,
+.row[min-width~='32rem'] > .col.sm-9,
+.row[min-width~='32rem'] > .col.sm-10,
+.row[min-width~='32rem'] > .col.sm-11,
+.row[min-width~='32rem'] > .col.sm-12,
+.row[min-width~='32rem'] > .col.sm-min,
+.row[min-width~='32rem'] > .col.sm-max {display: block}
+
+.row[min-width~='32rem'] > .col.sm-1,
+.row[min-width~='32rem'] > .col.sm-2,
+.row[min-width~='32rem'] > .col.sm-3,
+.row[min-width~='32rem'] > .col.sm-4,
+.row[min-width~='32rem'] > .col.sm-5,
+.row[min-width~='32rem'] > .col.sm-6,
+.row[min-width~='32rem'] > .col.sm-7,
+.row[min-width~='32rem'] > .col.sm-8,
+.row[min-width~='32rem'] > .col.sm-9,
+.row[min-width~='32rem'] > .col.sm-10,
+.row[min-width~='32rem'] > .col.sm-11,
+.row[min-width~='32rem'] > .col.sm-12,
+.row[min-width~='32rem'] > .col.sm-min {flex: none}
+
+.row[min-width~='32rem'] > .col.sm-min,
+.row[min-width~='32rem'] > .col.sm-max {width: auto}
+
+.row[min-width~='32rem'] > .col.sm-1 {width: 8.3333%}
+
+.row[min-width~='32rem'] > .col.sm-2 {width: 16.6667%}
+
+.row[min-width~='32rem'] > .col.sm-3 {width: 25%}
+
+.row[min-width~='32rem'] > .col.sm-4 {width: 33.3333%}
+
+.row[min-width~='32rem'] > .col.sm-5 {width: 41.6667%}
+
+.row[min-width~='32rem'] > .col.sm-6 {width: 50%}
+
+.row[min-width~='32rem'] > .col.sm-7 {width: 58.3333%}
+
+.row[min-width~='32rem'] > .col.sm-8 {width: 66.6667%}
+
+.row[min-width~='32rem'] > .col.sm-9 {width: 75%}
+
+.row[min-width~='32rem'] > .col.sm-10 {width: 83.3333%}
+
+.row[min-width~='32rem'] > .col.sm-11 {width: 91.6667%}
+
+.row[min-width~='32rem'] > .col.sm-12 {width: 100%}
+
+.row[min-width~='32rem'] > .col.sm-max {flex: 1 1 .00000001px} /* 1 */
+
+/* Medium (>= 768px)
+----------------------------- */
+
+.row[min-width~='48rem'] > .col.md-0 {display: none}
+
+.row[min-width~='48rem'] > .col.md-1,
+.row[min-width~='48rem'] > .col.md-2,
+.row[min-width~='48rem'] > .col.md-3,
+.row[min-width~='48rem'] > .col.md-4,
+.row[min-width~='48rem'] > .col.md-5,
+.row[min-width~='48rem'] > .col.md-6,
+.row[min-width~='48rem'] > .col.md-7,
+.row[min-width~='48rem'] > .col.md-8,
+.row[min-width~='48rem'] > .col.md-9,
+.row[min-width~='48rem'] > .col.md-10,
+.row[min-width~='48rem'] > .col.md-11,
+.row[min-width~='48rem'] > .col.md-12,
+.row[min-width~='48rem'] > .col.md-min,
+.row[min-width~='48rem'] > .col.md-max {display: block}
+
+.row[min-width~='48rem'] > .col.md-1,
+.row[min-width~='48rem'] > .col.md-2,
+.row[min-width~='48rem'] > .col.md-3,
+.row[min-width~='48rem'] > .col.md-4,
+.row[min-width~='48rem'] > .col.md-5,
+.row[min-width~='48rem'] > .col.md-6,
+.row[min-width~='48rem'] > .col.md-7,
+.row[min-width~='48rem'] > .col.md-8,
+.row[min-width~='48rem'] > .col.md-9,
+.row[min-width~='48rem'] > .col.md-10,
+.row[min-width~='48rem'] > .col.md-11,
+.row[min-width~='48rem'] > .col.md-12,
+.row[min-width~='48rem'] > .col.md-min {flex: none}
+
+.row[min-width~='48rem'] > .col.md-min,
+.row[min-width~='48rem'] > .col.md-max {width: auto}
+
+.row[min-width~='48rem'] > .col.md-1 {width: 8.3333%}
+
+.row[min-width~='48rem'] > .col.md-2 {width: 16.6667%}
+
+.row[min-width~='48rem'] > .col.md-3 {width: 25%}
+
+.row[min-width~='48rem'] > .col.md-4 {width: 33.3333%}
+
+.row[min-width~='48rem'] > .col.md-5 {width: 41.6667%}
+
+.row[min-width~='48rem'] > .col.md-6 {width: 50%}
+
+.row[min-width~='48rem'] > .col.md-7 {width: 58.3333%}
+
+.row[min-width~='48rem'] > .col.md-8 {width: 66.6667%}
+
+.row[min-width~='48rem'] > .col.md-9 {width: 75%}
+
+.row[min-width~='48rem'] > .col.md-10 {width: 83.3333%}
+
+.row[min-width~='48rem'] > .col.md-11 {width: 91.6667%}
+
+.row[min-width~='48rem'] > .col.md-12 {width: 100%}
+
+.row[min-width~='48rem'] > .col.md-max {flex: 1 1 .00000001px} /* 1 */
+
+/* Large (>= 1024px)
+----------------------------- */
+
+.row[min-width~='64rem'] > .col.lg-0 {display: none}
+
+.row[min-width~='64rem'] > .col.lg-1,
+.row[min-width~='64rem'] > .col.lg-2,
+.row[min-width~='64rem'] > .col.lg-3,
+.row[min-width~='64rem'] > .col.lg-4,
+.row[min-width~='64rem'] > .col.lg-5,
+.row[min-width~='64rem'] > .col.lg-6,
+.row[min-width~='64rem'] > .col.lg-7,
+.row[min-width~='64rem'] > .col.lg-8,
+.row[min-width~='64rem'] > .col.lg-9,
+.row[min-width~='64rem'] > .col.lg-10,
+.row[min-width~='64rem'] > .col.lg-11,
+.row[min-width~='64rem'] > .col.lg-12,
+.row[min-width~='64rem'] > .col.lg-min,
+.row[min-width~='64rem'] > .col.lg-max {display: block}
+
+.row[min-width~='64rem'] > .col.lg-1,
+.row[min-width~='64rem'] > .col.lg-2,
+.row[min-width~='64rem'] > .col.lg-3,
+.row[min-width~='64rem'] > .col.lg-4,
+.row[min-width~='64rem'] > .col.lg-5,
+.row[min-width~='64rem'] > .col.lg-6,
+.row[min-width~='64rem'] > .col.lg-7,
+.row[min-width~='64rem'] > .col.lg-8,
+.row[min-width~='64rem'] > .col.lg-9,
+.row[min-width~='64rem'] > .col.lg-10,
+.row[min-width~='64rem'] > .col.lg-11,
+.row[min-width~='64rem'] > .col.lg-12,
+.row[min-width~='64rem'] > .col.lg-min {flex: none}
+
+.row[min-width~='64rem'] > .col.lg-min,
+.row[min-width~='64rem'] > .col.lg-max {width: auto}
+
+.row[min-width~='64rem'] > .col.lg-1 {width: 8.3333%}
+
+.row[min-width~='64rem'] > .col.lg-2 {width: 16.6667%}
+
+.row[min-width~='64rem'] > .col.lg-3 {width: 25%}
+
+.row[min-width~='64rem'] > .col.lg-4 {width: 33.3333%}
+
+.row[min-width~='64rem'] > .col.lg-5 {width: 41.6667%}
+
+.row[min-width~='64rem'] > .col.lg-6 {width: 50%}
+
+.row[min-width~='64rem'] > .col.lg-7 {width: 58.3333%}
+
+.row[min-width~='64rem'] > .col.lg-8 {width: 66.6667%}
+
+.row[min-width~='64rem'] > .col.lg-9 {width: 75%}
+
+.row[min-width~='64rem'] > .col.lg-10 {width: 83.3333%}
+
+.row[min-width~='64rem'] > .col.lg-11 {width: 91.6667%}
+
+.row[min-width~='64rem'] > .col.lg-12 {width: 100%}
+
+.row[min-width~='64rem'] > .col.lg-max {flex: 1 1 .00000001px} /* 1 */
+
+/* Extra-Large (>= 1280px)
+----------------------------- */
+
+.row[min-width~='80rem'] > .col.xl-0 {display: none}
+
+.row[min-width~='80rem'] > .col.xl-1,
+.row[min-width~='80rem'] > .col.xl-2,
+.row[min-width~='80rem'] > .col.xl-3,
+.row[min-width~='80rem'] > .col.xl-4,
+.row[min-width~='80rem'] > .col.xl-5,
+.row[min-width~='80rem'] > .col.xl-6,
+.row[min-width~='80rem'] > .col.xl-7,
+.row[min-width~='80rem'] > .col.xl-8,
+.row[min-width~='80rem'] > .col.xl-9,
+.row[min-width~='80rem'] > .col.xl-10,
+.row[min-width~='80rem'] > .col.xl-11,
+.row[min-width~='80rem'] > .col.xl-12,
+.row[min-width~='80rem'] > .col.xl-min,
+.row[min-width~='80rem'] > .col.xl-max {display: block}
+
+.row[min-width~='80rem'] > .col.xl-1,
+.row[min-width~='80rem'] > .col.xl-2,
+.row[min-width~='80rem'] > .col.xl-3,
+.row[min-width~='80rem'] > .col.xl-4,
+.row[min-width~='80rem'] > .col.xl-5,
+.row[min-width~='80rem'] > .col.xl-6,
+.row[min-width~='80rem'] > .col.xl-7,
+.row[min-width~='80rem'] > .col.xl-8,
+.row[min-width~='80rem'] > .col.xl-9,
+.row[min-width~='80rem'] > .col.xl-10,
+.row[min-width~='80rem'] > .col.xl-11,
+.row[min-width~='80rem'] > .col.xl-12,
+.row[min-width~='80rem'] > .col.xl-min {flex: none}
+
+.row[min-width~='80rem'] > .col.xl-min,
+.row[min-width~='80rem'] > .col.xl-max {width: auto}
+
+.row[min-width~='80rem'] > .col.xl-1 {width: 8.3333%}
+
+.row[min-width~='80rem'] > .col.xl-2 {width: 16.6667%}
+
+.row[min-width~='80rem'] > .col.xl-3 {width: 25%}
+
+.row[min-width~='80rem'] > .col.xl-4 {width: 33.3333%}
+
+.row[min-width~='80rem'] > .col.xl-5 {width: 41.6667%}
+
+.row[min-width~='80rem'] > .col.xl-6 {width: 50%}
+
+.row[min-width~='80rem'] > .col.xl-7 {width: 58.3333%}
+
+.row[min-width~='80rem'] > .col.xl-8 {width: 66.6667%}
+
+.row[min-width~='80rem'] > .col.xl-9 {width: 75%}
+
+.row[min-width~='80rem'] > .col.xl-10 {width: 83.3333%}
+
+.row[min-width~='80rem'] > .col.xl-11 {width: 91.6667%}
+
+.row[min-width~='80rem'] > .col.xl-12 {width: 100%}
+
+.row[min-width~='80rem'] > .col.xl-max {flex: 1 1 .00000001px} /* 1 */
+
+/**
+ * 1. The `xs-max` class applies a `flex` value of `1 1 .00000001px` rather than `1 1 0` because
+ * the minification system removes the unit for 0 values. This would normally be fine, except
+ * Internet Explorer does not handle this properly.
+ */
